Fix crash at exit when datachecker job is running

BUG: 289153